Fixed workind directory path in launchSettings.json file.

--- a/HC_ConsoleApp/Properties/launchSettings.json
+++ b/HC_ConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Profile 1": {
       "commandName": "Project",
-      "workingDirectory": "C:\\School\\University (FSU)\\Fall 2025\\COP 4870\\repos\\HC_ConsoleApp\\HC_ConsoleApp\\"
+      "workingDirectory": "C:\\Users\\lcesa\\source\\repos\\CLI.Charting-System\\HC_ConsoleApp"
     }
   }
 }
