--- a/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
+++ b/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
@@ -68,4 +68,8 @@
 	  <ProjectReference Include="..\Library.ChartingSystem\Library.ChartingSystem.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Views\" />
+	</ItemGroup>
+
 </Project>
