Implemented Add Appointment Functionalities, and a few other changes and improvements. Closes #30
Add appointment management features

Refactored the `Appointment` class for null safety and encapsulation.
Updated `Patient` and `Physician` classes for better formatting.
Enhanced `ChartServiceProxy` with sample data for testing.

Added `AddAppointmentViewModel` to
manage appointment. Introduced new view
(`AddAppointment.xaml`) with modern UI
and navigation support.

Updated `AppShell` and `MainPage` to include navigation to the new views. Simplified `AddPatientViewModel` and improved maintainability.

These changes improve functionality, maintainability, and user experience while adhering to modern development practices.

--- a/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
+++ b/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
@@ -69,7 +69,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Views\PhysicianView.xaml">
+	  <Compile Update="Views\AddPhysician.xaml.cs">
+	    <DependentUpon>AddPhysician.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\AddAppointment.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\AddPhysician.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
