Add Physicians management feature to the application
Introduced a new `Physicians` view and ViewModel to manage physicians. Updated `AppShell.xaml` to include a new route for `Physicians` and added a "Physicians" button in `MainPage.xaml` for navigation. Implemented the `PhysiciansClicked` method in `MainPage.xaml.cs` to handle navigation.

Created `Physicians.xaml` and its code-behind to display a list of physicians with options to add, edit, and delete. Updated `MAUI.ChartingSystem.csproj` to include the new view. Adjusted navigation logic in `AddPhysician.xaml.cs` to redirect to the `Physicians` route.

Performed minor cleanup in `PatientsViewModel.cs` and added necessary namespaces in `PhysiciansViewModel.cs`. These changes enhance the application's functionality by enabling physician management.

--- a/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
+++ b/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
@@ -84,6 +84,9 @@
 	  <MauiXaml Update="Views\Patients.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Physicians.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
