Add Appointments page with navigation and ViewModel.
Introduced a new Appointments page to manage appointments, including UI, navigation, and ViewModel logic. Updated `AppShell.xaml` to include navigation to the Appointments page. Added a button and event handler in `MainPage` for navigation.

Refactored `PatientsViewModel` and  PhysiciansViewModel` to improve command naming consistency. Updated `AddAppointmentViewModel` and `AddAppointment.xaml.cs` to navigate to the Appointments page after operations.

Created `AppointmentsViewModel` to handle appointment data and commands for editing and deleting appointments. Added `Appointments.xaml` and `Appointments.xaml.cs` for the Appointments page UI and code-behind. Updated the project file to include the new Appointments page.

Closes #44

--- a/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
+++ b/MAUI.ChartingSystem/MAUI.ChartingSystem.csproj
@@ -81,6 +81,9 @@
 	  <MauiXaml Update="Views\AddPhysician.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Appointments.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Patients.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
