Refactor API and services for improved structure
Updated `API.ChartingSystem.csproj` to adjust the `<HintPath>` for `Library.ChartingSystem` to use the `obj` directory.

Refined `PatientController` routes by removing the `api/` prefix and added or updated HTTP methods for CRUD and search endpoints.

Simplified queries in `PatientEC` by commenting out `.ThenInclude(m => m.CreatedBy)` in `Get` and `GetById` methods.

Refactored `PatientServiceProxy`:
- Changed visibility of async methods (`GetAllAsync`, `GetByIdAsync`, etc.) from `public` to `private` for better encapsulation.
- Added a new `Search` method for patient queries.
- Updated `SearchAsync` with a clarifying comment.

These changes enhance maintainability, enforce stricter access control, and align API routes with updated conventions.

--- a/API.ChartingSystem/API.ChartingSystem/API.ChartingSystem.csproj
+++ b/API.ChartingSystem/API.ChartingSystem/API.ChartingSystem.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <Reference Include="Library.ChartingSystem">
-      <HintPath>..\..\Library.ChartingSystem\bin\Debug\net8.0\Library.ChartingSystem.dll</HintPath>
+      <HintPath>..\..\Library.ChartingSystem\obj\Debug\net8.0\Library.ChartingSystem.dll</HintPath>
     </Reference>
   </ItemGroup>
 
